RESOLVED FIXED108911
INPUT_MULTIPLE_FIELDS_UI: Use disabled attribute internally instead of readonly attribute
https://bugs.webkit.org/show_bug.cgi?id=108911
Summary INPUT_MULTIPLE_FIELDS_UI: Use disabled attribute internally instead of readon...
Kent Tamura
Reported 2013-02-04 23:15:37 PST
Use disabled attribute internally instead of readonly attribute because readonly attribute means focusable-but-non-editable in HTML though it represents non-focusable-and-non-editable state.
Attachments
Patch (26.06 KB, patch)
2013-02-04 23:26 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-02-04 23:26:25 PST
Kentaro Hara
Comment 2 2013-02-04 23:52:51 PST
Comment on attachment 186555 [details] Patch Looks better than readonly.
Kent Tamura
Comment 3 2013-02-04 23:59:38 PST
Comment on attachment 186555 [details] Patch thanks
WebKit Review Bot
Comment 4 2013-02-05 00:33:09 PST
Comment on attachment 186555 [details] Patch Clearing flags on attachment: 186555 Committed r141866: <http://trac.webkit.org/changeset/141866>
WebKit Review Bot
Comment 5 2013-02-05 00:33:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.