Source/WebCore/html/shadow/DateTimeNumericFieldElement.cpp
@@ -126,7 +126,7 @@ String DateTimeNumericFieldElement::formatValue(int value) const
 
 void DateTimeNumericFieldElement::handleKeyboardEvent(KeyboardEvent* keyboardEvent)
 {
-    if (isReadOnly())
+    if (isDisabled())
         return;
 
     if (keyboardEvent->type() != eventNames().keypressEvent)
@@ -174,7 +174,7 @@ int DateTimeNumericFieldElement::maximum() const
 
 void DateTimeNumericFieldElement::setEmptyValue(EventBehavior eventBehavior)
 {
-    if (isReadOnly())
+    if (isDisabled())
         return;
 
     m_hasValue = false;
